# openfixedpoint

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PROJECT_SCOPE.md  README.md
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_cpp_template  test_gen_q8_8  test_q16_16_c  test_q16_16_cpp  test_q7_c
docs/: GENERATION.md
include/: fixp_q16_16.h  fixp_q7.h  libfixp_q16_16.h  libfixp_q7.h
include/fixp/: dsp.hpp  fixed_point.hpp  generic.h  math.hpp
include/libfixp/: fixed_point.hpp  generic.h
research/: RESEARCH_SUMMARY.md
research/concepts/: alternative_number_formats.md  code_generation_strategy.md  cordic_algorithms.md  cordic_deep_dive.md  cordic_mathematics.md  dsp_algorithms.md  embedded_constraints.md  float_fixed_interop.md  formal_verification_tools.md  format_comparison_benchmarks.md  gpu_compute_deep_dive.md  gpu_opencl_patterns.md  graphics_math.md  hardware_optimizations.md  language_binding_patterns.md  modular_8bit_architecture.md  numerical_analysis.md  overflow_semantics.md  polynomial_approximation.md  q_format_theory.md  real_world_case_studies.md  simd_deep_dive.md  simd_intrinsic_catalog.md  simd_patterns.md  testing_strategies.md
research/implementations/: IMPLEMENTATION_SUMMARY.md  existing_libraries.md  external_repo_analysis.md
research/notes/: clean_room_methodology.md
research/papers/: papers_index.md
research/standards/: standards_overview.md
scripts/: generate_headers.py  generate_math_headers.py
spec/: test_harness_architecture.md  type_system_design.md
tests/: CMakeLists.txt
tests/unit/: test_c_math_functions.c  test_cpp_template.cpp  test_dsp_functions.cpp  test_gen_q8_8.c  test_math_functions.cpp  test_q16_16.c  test_q16_16.cpp  test_q7.c
